--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,14 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
         {% endif %}
 
+        {% if site.is_user_page %}
+        <ul class="links">
+          <li><a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">linkedin</a></li>
+          <li><a href="https://scholar.google.ru/citations?user=Bktg6JEAAAAJ&hl=ru">Google Scholar</a></li>
+          <li><a href="{{ site.github.owner_url }}"><strong>GitHub</strong></a></li>
+        </ul>
+        {% endif %}
+
         {% if site.show_downloads %}
         <ul class="downloads">
           <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
