--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
         {% endif %}
 
         {% if site.is_user_page %}
-        <ul class="links">
+        <ul class="view">
           <li><a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">linkedin</a></li>
           <li><a href="https://scholar.google.ru/citations?user=Bktg6JEAAAAJ&hl=ru">Google Scholar</a></li>
           <li><a href="{{ site.github.owner_url }}"><strong>GitHub</strong></a></li>
@@ -59,15 +59,5 @@
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
   </body>
 </html>
