--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,15 +29,20 @@
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My  Profile</a></p>
-        {% endif %}
 
-        {% if site.is_user_page %}
-        <ul class="view">
+        {% endif %}
+        <ul class="downloads">
           <li><a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">linkedin</a></li>
           <li><a href="https://scholar.google.ru/citations?user=Bktg6JEAAAAJ&hl=ru">Google Scholar</a></li>
           <li><a href="{{ site.github.owner_url }}"><strong>GitHub</strong></a></li>
         </ul>
-        {% endif %}
+<!--        {% if site.is_user_page %}-->
+<!--        <ul class="view">-->
+<!--          <li><a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">linkedin</a></li>-->
+<!--          <li><a href="https://scholar.google.ru/citations?user=Bktg6JEAAAAJ&hl=ru">Google Scholar</a></li>-->
+<!--          <li><a href="{{ site.github.owner_url }}"><strong>GitHub</strong></a></li>-->
+<!--        </ul>-->
+<!--        {% endif %}-->
 
         {% if site.show_downloads %}
         <ul class="downloads">
