--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,18 +31,9 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My  Profile</a></p>
 
         {% endif %}
-        <ul class="downloads">
-          <li><a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">linkedin</a></li>
-          <li><a href="https://scholar.google.ru/citations?user=Bktg6JEAAAAJ&hl=ru">Google Scholar</a></li>
-          <li><a href="{{ site.github.owner_url }}"><strong>GitHub</strong></a></li>
-        </ul>
-<!--        {% if site.is_user_page %}-->
-<!--        <ul class="view">-->
-<!--          <li><a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138">linkedin</a></li>-->
-<!--          <li><a href="https://scholar.google.ru/citations?user=Bktg6JEAAAAJ&hl=ru">Google Scholar</a></li>-->
-<!--          <li><a href="{{ site.github.owner_url }}"><strong>GitHub</strong></a></li>-->
-<!--        </ul>-->
-<!--        {% endif %}-->
+        <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138/">
+          <img src="images/linkedin.jpg" alt="linkedin link" />
+        </a>
 
         {% if site.show_downloads %}
         <ul class="downloads">
