--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,13 @@
 
         {% endif %}
         <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138/">
-          <img src="images/linkedin.jpg" alt="linkedin link" />
+          <img src="images/linkedin.svg" alt="linkedin" class="logo-img">
         </a>
+        <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138/">
+          <img src="images/linkedin.svg" alt="Logo" class="loo">
+        </a>
+<!--        <img src="images/.svg" alt="Logo" class="logo-img">-->
+
 
         {% if site.show_downloads %}
         <ul class="downloads">
