--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,12 +31,18 @@
         <p class="view"><a href="{{ site.github.owner_url }}">View My  Profile</a></p>
 
         {% endif %}
-        <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138/">
-          <img src="images/linkedin.svg" alt="linkedin" class="logo-img">
-        </a>
-        <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138/">
-          <img src="images/linkedin.svg" alt="Logo" class="loo">
-        </a>
+        <div class="row">
+          <div class="column">
+              <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138/">
+                <img src="images/linkedin.svg" alt="linkedin" style="width:20%">
+              </a>
+          </div>
+          <div class="column">
+            <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138/">
+              <img src="images/linkedin.svg" alt="Logo" style="width:20%">
+            </a>
+          </div>
+        </div>
 <!--        <img src="images/.svg" alt="Logo" class="logo-img">-->
 
 
