First version of Portfolio

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     }
 
     .column {
-      flex: 33.33%;
+      flex: 25%;
       padding: 5px;
     }
    </style>
@@ -41,17 +41,23 @@
         <div class="row">
           <div class="column">
               <a href="https://www.linkedin.com/mwlite/in/vage-egiazarian-47b18a138/">
-                <img src="images/linkedin.svg" alt="linkedin" style="width:33%">
+                <img src="images/linkedin.svg" alt="linkedin" style="width:100%">
               </a>
           </div>
           <div class="column">
             <a href="{{ site.github.owner_url }}">
-              <img src="images/Octocat.png" alt="gihub" style="width:33%">
+              <img src="images/Octocat.png" alt="gihub" style="width:100%">
             </a>
           </div>
           <div class="column">
             <a href="https://docs.google.com/document/d/182k1H39R1zRHAGJo4B-v4ZHne26NJ3TOEjxDLfMhQBA/edit?usp=sharing">
-              <img src="images/cv.png" alt="CV" style="width:33%">
+              <img src="images/cv.png" alt="CV" style="width:100%">
+            </a>
+
+          </div>
+          <div class="column">
+            <a href="https://scholar.google.com/citations?user=Bktg6JEAAAAJ&hl=ru&oi=ao">
+              <img src="images/Google_Scholar_logo.png" alt="CV" style="width:100%">
             </a>
           </div>
         </div>
