--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
           </div>
           <div class="column">
             <a href="https://scholar.google.com/citations?user=Bktg6JEAAAAJ&hl=ru&oi=ao">
-              <img src="images/Google_Scholar_logo.png" alt="CV" style="width:100%">
+              <img src="images/Google_Scholar_logo.svg" alt="gsc" style="width:100%">
             </a>
           </div>
         </div>
