--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
             </a>
           </div>
           <div class="column">
-            <a href="https://docs.google.com/document/d/182k1H39R1zRHAGJo4B-v4ZHne26NJ3TOEjxDLfMhQBA/edit?usp=sharing">
+            <a href="https://drive.google.com/file/d/1F29Yk9J3PdezZVbDkMmsviWpZK89m3av/view?usp=sharing">
               <img src="images/cv.png" alt="CV" style="width:100%">
             </a>
 
